Small changes, preparing for a release (#40)
* Add some metadata required (or useful to) crates.io
 * Bump some deps

Signed-off-by: Javier G. Sogo <jgsogo@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,30 @@
 [package]
 name = "appconfiguration"
-version = "0.1.0"
+version = "0.1.0-rc.0"
 edition = "2021"
 description = "The IBM Cloud App Configuration Rust SDK is used to perform feature flag and property evaluation based on the configuration on IBM Cloud App Configuration service."
 repository = "https://github.com/IBM/appconfiguration-rust-sdk"
 readme = "README.md"
 keywords = ["ibm", "feature-flag", "remote-control"]
 categories = ["config"]
-license = "Apache-2.0"
+license-file = "LICENSE"
+homepage = "https://cloud.ibm.com/docs/app-configuration"
+exclude = [
+    ".github/*",
+    ".gitignore",
+    ".pre-commit-config.yaml",
+    ".secrets.baseline",
+    "README.tpl",
+]
 
 [dependencies]
 reqwest = { version = "0.12.9", features = ["json", "blocking"] }
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = { version = "1.0.133" }
 murmur3 = "0.5.2"
-tungstenite = { version = "0.25.0", features = ["native-tls"] }
+tungstenite = { version = "0.26.0", features = ["native-tls"] }
 url = "2.5.4"
-thiserror = "2.0.4"
+thiserror = "2.0.7"
 
 [dev-dependencies]
 dotenvy = "0.15.7"
